# netmcp

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  release.yml
docs/: ADD.md  API.md  ARCHITECTURE.md  COMPARISON.md  SDD.md
src/netmcp/: __init__.py  server.py
src/netmcp/core/: formatter.py  history.py  security.py
src/netmcp/interfaces/: __init__.py  nmap.py  threat_intel.py  tshark.py
src/netmcp/prompts/: workflows.py
src/netmcp/resources/: __init__.py
src/netmcp/tools/: __init__.py  advanced.py  analysis.py  capture.py  credentials.py  export_tools.py  flow_tls.py  nmap_scan.py  pcap_tools.py  profiles.py  streaming.py  streams.py  threat_intel.py
src/netmcp/utils/: geoip.py
tests/: test_e2e.py
tests/benchmarks/: conftest.py  test_analysis_perf.py  test_network_perf.py
tests/test_core/: test_formatter.py  test_history.py  test_security.py  test_security_fixes.py
tests/test_interfaces/: test_nmap.py  test_nmap_coverage.py  test_threat_intel.py  test_tshark.py  test_tshark_coverage.py
tests/test_prompts/: test_prompts_extended.py  test_workflows.py
tests/test_resources/: test_resources.py
tests/test_tools/: test_advanced.py  test_capture_coverage.py  test_comprehensive.py  test_coverage_boost.py  test_deep_analysis.py  test_flow_tls.py  test_kerberos.py  test_new_features.py  test_new_tools.py  test_pcap_tools.py  test_profiles.py  test_streaming_coverage.py  test_threat_coverage.py  test_tools_full.py  test_tools_integration.py  test_tshark_gaps.py
tests/test_utils/: test_geoip_coverage.py
