[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netmcp"
version = "0.1.0"
description = "Professional-grade network analysis MCP server with Wireshark, Nmap, and threat intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "NetMCP Contributors"}
]
keywords = [
    "mcp", "wireshark", "tshark", "nmap", "network-analysis",
    "packet-capture", "threat-intelligence", "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-nmap>=0.7.1",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "maxminddb-geolite2>=2018.703",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "scapy>=2.5.0",
]

[project.scripts]
netmcp = "netmcp.server:main"

[project.urls]
Homepage = "https://github.com/cortexc0de/netmcp"
Documentation = "https://github.com/cortexc0de/netmcp#readme"
Repository = "https://github.com/cortexc0de/netmcp"
Issues = "https://github.com/cortexc0de/netmcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/netmcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF",
]
ignore = ["E501", "SIM117", "SIM105", "RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["netmcp"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
strict_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=netmcp --cov-report=html --cov-report=term"
markers = ["benchmark: performance benchmarks"]

[tool.coverage.run]
source = ["src/netmcp"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
